# mqtt-s2-resource-manager-template

./: .gitignore  README.md  cookiecutter.json  environment.env.example  pyproject.toml
common/: allowedMessages.py  device.py  messaging.py  model_interface.py  power_data_connector.py  rmClient.py
hooks/: post_gen_project.py  pre_gen_project.py
pv_rm_interface/: Dockerfile  compose.yaml  docker-compose.yml  main.py  pv_model_caller.py  pv_power_adapter.py  pv_system.py
pv_rm_interface/resources/: PV_production_2020_1hRes.csv  config.example.json  config.json
pv_rm_interface/tests/: cem_onboarding.py  test_allowedMessages.py  test_rmClient_basic.py
{{ cookiecutter.package_name }}/: Dockerfile  compose.yaml  docker-compose.yml  main.py  pyproject.toml  {% if cookiecutter.with_model == 'yes' %}{{ cookiecutter.prefix }}_model_caller.py{% endif %}  {{ cookiecutter.prefix }}_power_adapter.py  {{ cookiecutter.prefix }}_system.py
{{ cookiecutter.package_name }}/resources/: config.example.json  config.json
{{ cookiecutter.package_name }}/tests/: cem_onboarding.py
