[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.prefix }}-rm-interface"
version = "0.10.0"

description = "RM MQTT interface template for smart appliances or BACS."
readme = "README.md"
authors = [
    { name = "Autor", email = "name@domain.org" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt==1.6.1",
    "s2-python==0.8.1",
    "pandas==2.2.2"
]


[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"] 

[tool.setuptools]
packages = ["{{ cookiecutter.package_name }}", "common"]

[tool.setuptools.package-data]
"{{ cookiecutter.package_name }}" = ["resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["{{ cookiecutter.package_name }}/tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.4.2",
]

